fix:swagger apis
